using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    #region Animation Constants
    public static string IDLE = "idle";
    public static string RUNNING = "running";
    public static string LAND = "land";
    public static string IN_AIR = "inAir";
    public static string WALL_SLIDE = "wallSlide";
    public static string ROLL = "roll";
    public static string HARD_LAND = "hardLand";
    #endregion
}
